--- a/erhure.html
+++ b/erhure.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="pedro">chano</div>
+    <div class="pedro">chano2</div>
 </body>
 </html>
